<resources>
    <string name="AboutWord">About</string>
    <string name="AccountCreationFloodcheck">You have made too many accounts. Please wait before making more.</string>
    <string name="AndWord">And</string>
    <string name="AnyUserNeedsToSignIn">Please login to complete the pending transaction. If this problem persists contact our staff at discord.gg/finobe</string>
    <string name="AppPurchasingDisabledTitle">In-App Purchasing disabled</string>
    <string name="BirthdayInvalid">Your birthday appears to be incorrect.</string>
    <string name="BirthdayRequirements">Select Your Birthday</string>
    <string name="BirthdayWord">Birthday</string>
    <string name="BuildWord">Build</string>
    <string name="BuildersClubWord">Settings</string>
    <string name="CancelWord">Cancel</string>
    <string name="CannotMakePurchase">We are sorry, you cannot make purchases at this time. If this problem persists contact our staff at discord.gg/finobe</string>
    <string name="CannotPurchaseBecauseParentalControl">You are not able to make purchases. Check your parental control settings and try again later.</string>
    <string name="CatalogWord">Catalog</string>
    <string name="ChooseOne">Choose one</string>
    <string name="ClearCookiesWord">Clear Cookies</string>
    <string name="CloseWord">Close</string>
    <string name="CommunityWord">Community</string>
    <string name="ConnectionError">Hexagon requires Internet connection</string>
    <string name="ConnectionErrorGameEnded">Cannot join this game because it has ended.</string>
    <string name="ConnectionErrorGameFull">Cannot join this game because it is full.</string>
    <string name="CookiesClearedMessage">Hexagon Cookies are cleared</string>
    <string name="CrashFound">The game did not end correctly. You may need a Software Update. See the Settings section About Device.</string>
    <string name="DefaultDeviceBlacklist">XT1080,Nexus 7,SMÃ‚Â¬?-T210R,SM-T320</string>
    <string name="DismissButtonText">Dismiss</string>
    <string name="DoneWord">Done</string>
    <string name="EmailInvalid">Your email address appears to be invalid.</string>
    <string name="EmailRequirements">(optional)</string>
    <string name="EmailRequirementsUnder13">"(parent's email)"</string>
    <string name="EmailWord">Email</string>
    <string name="EndingGame">Game Closing</string>
    <string name="EnterHerePhrase">Enter Here</string>
    <string name="EntryIncorrectBody">One or more of the fields are incorrect or empty.</string>
    <string name="EntryIncorrectTitle">Please Check Entries</string>
    <string name="FieldsIncomplete">Not all required fields are filled</string>
    <string name="GameWord">Games</string>
    <string name="GenderBoy">Boy</string>
    <string name="GenderGirl">Girl</string>
    <string name="GenderWord">Gender</string>
    <string name="GeneralGameStartError">There was an error starting this game.</string>
    <string name="GroupsWord">Clans</string>
    <string name="HavePendingTransactionError">You already have pending transactions, please try again after some time. You may need to restart your device. If this problem persists contact our staff at discord.gg/finobe</string>
    <string name="IgnoreButtonText">Ignore</string>
    <string name="InvalidCharactersUsed">Invalid characters used</string>
    <string name="InvalidUsernameOrPw">Invalid username or password</string>
    <string name="InventoryWord">Customize</string>
    <string name="LaunchGame">Launching Game</string>
    <string name="LeaderboardsWord">Leaderboards</string>
    <string name="LegalText">Project Hexagon is not affiliated with Roblox Corporation. Contact us at discord.gg/finobe (Port made by SkylerClock)</string>
    <string name="LicensingAgreement">Licensing Agreement</string>
    <string name="LoggedOut">You have been logged out.</string>
    <string name="LoggingIn">Logging In</string>
    <string name="LoginButton">Login</string>
    <string name="LoginFailedTitle">Login Failed - %s</string>
    <string name="LoginWord">Login</string>
    <string name="LogoutConfirmation">Do you want to log out?</string>
    <string name="LogoutWord">Logout</string>
    <string name="MemoryError">"We're sorry, this place uses too many parts for your device"</string>
    <string name="MessagesWord">Messages</string>
    <string name="NeedsExternalLogin">Your user account has issues, please try logging in using Safari or any other browser</string>
    <string name="NextWord">Next</string>
    <string name="NoSignupBirthdayError">No birthday specified, please select a birthday.</string>
    <string name="NoSignupGenderError">No gender specified, please select a gender.</string>
    <string name="NoSignupPasswordError">No password specified, please enter a password.</string>
    <string name="NoSignupUsernameError">No username was entered, please enter a username.</string>
    <string name="NoSignupVerifyPasswordError">"Password was not verified, please enter password in 'Verify' field."</string>
    <string name="OkWord">Ok</string>
    <string name="PairWord">Pair</string>
    <string name="PasswordNoMatch">Passwords do not match. Please retype your password.</string>
    <string name="PasswordRequirements">6-20 characters with at least 2 numbers</string>
    <string name="PasswordRequirementsShort">6-20 characters</string>
    <string name="PasswordWord">Password</string>
    <string name="PasswordWrongAndroid">Password must contain 6-20 characters with at least 2 numbers.</string>
    <string name="PlayNowButtonLabel">Play Now</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="ProfileWord">Profile</string>
    <string name="PurchaseSuccessful">Purchase successful, it may take up to 5 minutes to be reflected in your account</string>
    <string name="PurchasedFailed">Purchase failed, please try again</string>
    <string name="RateMeDialogMessage">We would really appreciate you rating Hexagon on the Play store.</string>
    <string name="RateMeDialogTitle">Please rate this app</string>
    <string name="RateMeNever">Never</string>
    <string name="RateMeNotNow">Not now</string>
    <string name="RateMeRateIt">Rate it</string>
    <string name="RatingNoThanksButton">No, Thanks</string>
    <string name="RatingRemindMeLaterButton">Remind me later</string>
    <string name="RatingString">If you enjoy using Hexagon, would you please rate it? It wont take more than a minute. If you are having issues or problems, please contact us at discord.gg/finobe.</string>
    <string name="RatingTitle">Rate Hexagon</string>
    <string name="RatingYesButton">Rate Hexagon</string>
    <string name="RbxDevConnectionCreated">Hexagon Studio connection created, waiting for setup...</string>
    <string name="RbxDevFinalizing">Finalizing some things...</string>
    <string name="RbxDevPairingInstructions">Type your Rbx Dev Code (should be 4 numbers) from Hexagon Studio to pair this device.</string>
    <string name="RbxDevPressConnect">Please press connect button when you have a server running on Hexagon Studio.</string>
    <string name="RbxDevStudioFound">Hexagon Studio found, creating connection...</string>
    <string name="RbxDevWaiting">Waiting for Hexagon Studio Connection...</string>
    <string name="RecommendUpgradeBody">A new version of %s is available in the App Store. We recommend installing it before continuing.</string>
    <string name="RecommendUpgradeTitle">Upgrade available!</string>
    <string name="RememberPassword">Remember Password</string>
    <string name="RequireUpgradeBody">Your version of %s is out of date and will not work properly. Please upgrade immediately.</string>
    <string name="RequireUpgradeTitle">Please Upgrade!</string>
    <string name="RobloxDevPairFailure">Pairing failed. Please try again.</string>
    <string name="RobloxDevPairFailureTimeout">Pairing timed out. Please retry.</string>
    <string name="RobloxDevSuccessfulPair">Pairing successful.</string>
    <string name="RobloxWord">Hexagon</string>
    <string name="SearchWord">Search</string>
    <string name="SelectBirthday">Select Birthday</string>
    <string name="SelectGender">Select Gender</string>
    <string name="SelectWord">Select</string>
    <string name="SessionExpired">Session Expired, Please logout and log back in to do the purchase</string>
    <string name="SigningUp">Signing Up...</string>
    <string name="SignupButton">Sign up</string>
    <string name="SignupFinePrint">"By tapping 'Sign up' above, you are agreeing to our &amp;lt;a href='https://hexagon.pw/legal/terms'&amp;gt;Terms of Service&amp;lt;/a&amp;gt; and &amp;lt;a href='https://hexagon.pw/legal/terms'&amp;gt;Privacy Policy&amp;lt;/a&amp;gt;. We will not share your information with third parties."</string>
    <string name="SignupFinePrintAndroid">"By tapping 'Sign up' above, you are agreeing to our &lt;a href='https://hexagon.pw/legal/terms'>Terms of Service&lt;/a>, &lt;a href='https://hexagon.pw/legal/privacy'>Licensing Agreement&lt;/a>, and &lt;a href='https://www.hexagon.pw/legal/privacy'>Privacy Policy&lt;/a>. We will not share your information with third parties."</string>
    <string name="SignupWord">Sign Up</string>
    <string name="TermsLicensingPrivacy">"&lt;a href='https://hexagon.pw/legal/terms'>Terms of Service&lt;/a> and &lt;a href='https://hexagon.pw/legal/privacy'>Privacy Policy&lt;/a>"</string>
    <string name="TermsOfService">Terms of Service</string>
    <string name="TooManyAttempts">Too many attempts - please try after 5 minutes</string>
    <string name="TransactionDelayedBody">Your transaction is delayed. We are still processing your transaction, it may take some more time.</string>
    <string name="TransactionDelayedTitle">Transaction delayed</string>
    <string name="TransactionFailedBody">Purchase failed, please contact our staff at discord.gg/finobe</string>
    <string name="TransactionFailedTitle">Purchase failed</string>
    <string name="UnexpectedError">Sorry! An unexpected error occured: %s.</string>
    <string name="UnknownLoginFailure">Login Failure - Unknown error!</string>
    <string name="UnsupportedDevice">Sorry, your device does not meet the minimum requirements to play games.</string>
    <string name="UnsupportedDeviceSkippable">Warning: Your device may not be powerful enough to play games smoothly.</string>
    <string name="UpgradeBodyString">Your version of Hexagon is out of date and will not work properly. Taking you to Google Play Store for Upgrade.</string>
    <string name="UpgradeButtonText">Upgrade</string>
    <string name="UserNeedsToSignIn">Hexagon User %s needs to login to complete the pending transaction before you can buy. You may need to restart your device. If this problem persists contact our staff at discord.gg/finobe</string>
    <string name="UsernameCannotContainSpaces">Username cannot contain spaces</string>
    <string name="UsernameExplicit">This username is not allowed, please try another.</string>
    <string name="UsernameRequirements">3-20 alphanumeric characters, no spaces</string>
    <string name="UsernameRequirementsShort">3-20 characters</string>
    <string name="UsernameTaken">This username is already taken! Try \"%s\" instead!</string>
    <string name="UsernameTooLong">Username is too long. Please select a name that is 3-20 alphanumeric characters.</string>
    <string name="UsernameTooShort">Username is too short. Please select a name that is 3-20 alphanumeric characters.</string>
    <string name="UsernameWord">Username</string>
    <string name="VerifyRequirements">Retype Password</string>
    <string name="VerifyWord">Verify</string>
    <string name="empty" />
    <string name="lorem_ipsum">Lorem ipsum dolor</string>
    <string name="lorem_ipsum_xl">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="placeholder_number">N/A</string>
</resources>