<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/fragment_sign_up_background" android:background="#80000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px" android:layout_weight="0.0" />
    <View android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.0">
        <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <LinearLayout android:orientation="vertical" android:background="@color/shell_dialog_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.0">
            <LinearLayout android:orientation="horizontal" android:background="@color/shell_dialog_bar" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:textColor="@color/shell_text_link" android:id="@id/fragment_sign_up_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/CancelWord" android:layout_weight="1.0" />
                <TextView android:textSize="20.0sp" android:textColor="@color/shell_text_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SignupWord" android:layout_weight="0.0" />
                <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/empty" android:layout_weight="1.0" />
            </LinearLayout>
            <TableLayout android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1">
                <TableRow>
                    <TextView android:textSize="20.0sp" android:textColor="@color/shell_text_normal" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/UsernameWord" />
                    <EditText android:textColorHint="@color/shell_text_hint" android:id="@id/fragment_sign_up_username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/empty" android:hint="@string/UsernameRequirements" android:inputType="textNoSuggestions" android:imeOptions="actionNext" />
                    <ImageView android:id="@id/fragment_sign_up_username_checked" android:layout_width="50.0dip" android:layout_height="50.0dip" android:contentDescription="@string/empty" />
                </TableRow>
                <TableRow>
                    <TextView android:textSize="20.0sp" android:textColor="@color/shell_text_normal" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/PasswordWord" />
                    <EditText android:textColorHint="@color/shell_text_hint" android:id="@id/fragment_sign_up_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/empty" android:hint="@string/PasswordRequirements" android:inputType="textPassword" android:imeOptions="actionNext" />
                    <ImageView android:id="@id/fragment_sign_up_password_checked" android:layout_width="50.0dip" android:layout_height="50.0dip" android:contentDescription="@string/empty" />
                </TableRow>
                <TableRow>
                    <TextView android:textSize="20.0sp" android:textColor="@color/shell_text_normal" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/VerifyWord" />
                    <EditText android:textColorHint="@color/shell_text_hint" android:id="@id/fragment_sign_up_password_verify" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/empty" android:hint="@string/VerifyRequirements" android:inputType="textPassword" android:imeOptions="actionDone" />
                    <ImageView android:id="@id/fragment_sign_up_password_verify_checked" android:layout_width="50.0dip" android:layout_height="50.0dip" android:contentDescription="@string/empty" />
                </TableRow>
                <TableRow>
                    <TextView android:textSize="20.0sp" android:textColor="@color/shell_text_normal" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/GenderWord" />
                    <Spinner android:textSize="20.0sp" android:id="@id/fragment_sign_up_gender_spinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" />
                </TableRow>
                <TableRow>
                    <TextView android:textSize="20.0sp" android:textColor="@color/shell_text_normal" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/BirthdayWord" />
                    <Button android:textSize="20.0sp" android:id="@id/fragment_sign_up_birthday" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/SelectBirthday" />
                </TableRow>
                <TableRow>
                    <TextView android:textSize="20.0sp" android:textColor="@color/shell_text_normal" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/EmailWord" />
                    <EditText android:textSize="20.0sp" android:textColorHint="@color/shell_text_hint" android:id="@id/fragment_sign_up_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/empty" android:hint="@string/EmailRequirements" android:inputType="textEmailAddress" android:imeOptions="actionDone" />
                    <ImageView android:id="@id/fragment_sign_up_email_checked" android:layout_width="50.0dip" android:layout_height="50.0dip" android:contentDescription="@string/empty" />
                </TableRow>
            </TableLayout>
            <Button android:textSize="25.0sp" android:id="@id/fragment_sign_up_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="150.0dip" android:layout_marginRight="150.0dip" android:text="@string/SignupWord" />
            <TextView android:textSize="15.0sp" android:textColor="@color/shell_text_normal" android:ellipsize="none" android:gravity="center" android:id="@id/fragment_sign_up_agreement" android:padding="20.0dip" android:layout_width="750.0dip" android:layout_height="wrap_content" android:text="@string/lorem_ipsum_xl" android:maxLines="100" android:scrollHorizontally="false" android:singleLine="false" />
        </LinearLayout>
        <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.0" />
</LinearLayout>