<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/fragment_about_background" android:background="@color/shell_dialog_background" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px" android:layout_weight="0.0" />
    <ImageView android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="80.0dip" android:src="@drawable/roblox_logo" android:scaleType="fitCenter" android:layout_weight="0.94" android:contentDescription="@string/empty" />
    <TextView android:textSize="15.0sp" android:textColor="@color/shell_text_normal" android:ellipsize="none" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/LegalText" android:layout_weight="0.0" />
    <View android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="0.41" />
    <com.roblox.client.AutoResizeTextView android:textSize="20.0sp" android:textColor="@color/shell_text_normal" android:ellipsize="none" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/fragment_about_terms_licenscing_privacy" android:layout_width="fill_parent" android:layout_height="25.0dip" android:text="@string/lorem_ipsum_xl" android:layout_weight="1.0" />
    <com.roblox.client.AutoResizeTextView android:textSize="20.0sp" android:textColor="@color/shell_text_normal" android:ellipsize="none" android:gravity="center" android:id="@id/fragment_about_baseURL" android:layout_width="fill_parent" android:layout_height="25.0dip" android:text="@string/lorem_ipsum_xl" android:layout_weight="1.0" />
    <TextView android:textSize="12.0sp" android:textColor="@color/shell_text_normal" android:ellipsize="none" android:gravity="center" android:id="@id/fragment_about_user_agent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lorem_ipsum" android:singleLine="true" android:layout_weight="0.2" android:textIsSelectable="true" />
</LinearLayout>