<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/activity_root" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/focusable_view" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px" />
    <LinearLayout android:orientation="horizontal" android:background="@color/webview_header" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@id/webview_grid" android:background="@android:color/transparent" android:paddingLeft="15.0dip" android:paddingTop="3.0dip" android:paddingRight="15.0dip" android:paddingBottom="3.0dip" android:layout_width="65.0dip" android:layout_height="35.0dip" android:src="@drawable/webview_grid" android:scaleType="centerInside" android:layout_weight="0.0" android:contentDescription="@string/empty" />
        <TextView android:textSize="20.0sp" android:textColor="@color/shell_text_normal" android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/webview_urlbar" android:background="@color/webview_url" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lorem_ipsum_xl" android:singleLine="true" android:layout_weight="1.0" android:textIsSelectable="true" />
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/webview_robux_layout" android:paddingLeft="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.0">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/robux_symbol2x" android:contentDescription="@string/empty" />
            <TextView android:textSize="25.0sp" android:textColor="@color/webview_text" android:layout_gravity="center_vertical" android:id="@id/robux_balance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/placeholder_number" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/webview_tickets_layout" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.0" />
    </LinearLayout>
    <WebView android:id="@id/web_view" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</LinearLayout>